<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/match4">

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_used"
        android:paddingHorizontal="20sp"
        android:paddingTop="15sp"
        android:text="@string/level"
        android:textColor="@color/teal_700"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/simple"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/match3"
        android:fontFamily="@font/font_used"
        android:paddingHorizontal="30sp"
        android:text="@string/simple"
        android:textColor="#FB6581"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/level"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/level"
        app:layout_constraintTop_toBottomOf="@+id/level" />

    <Button
        android:id="@+id/normal"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/match3"
        android:fontFamily="@font/font_used"
        android:paddingHorizontal="30sp"
        android:text="@string/normal"
        android:textColor="@color/match1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/level"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/level"
        app:layout_constraintTop_toBottomOf="@+id/simple" />

    <Button
        android:id="@+id/hard"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/match3"
        android:fontFamily="@font/font_used"
        android:paddingHorizontal="30sp"
        android:text="@string/hard"
        android:textColor="#FF0230"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/normal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/normal"
        app:layout_constraintTop_toBottomOf="@+id/normal" />
</androidx.constraintlayout.widget.ConstraintLayout>