<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/match5"
    tools:context=".MainActivity">

    <top.androidman.SuperButton
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"


        android:paddingVertical="20sp"
        android:paddingLeft="200sp"
        android:paddingRight="220sp"

        app:border_color="@color/match2"
        app:border_width="5dp"
        app:color_direction="TOP_BOTTOM"
        app:color_end="@color/match4"
        app:color_start="@color/match3"


        app:corner_left_top="35sp"
        app:corner_right_bottom="35sp"
        app:drawable_left="@drawable/ic_baseline_play_arrow_24"
        app:drawable_padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/subtitle"
        app:layout_constraintHorizontal_bias="0.4"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/subtitle"
        app:layout_constraintTop_toBottomOf="@+id/subtitle"
        app:layout_constraintVertical_bias="0.279"
        app:text="@string/start"
        app:textColor="@color/match1"
        app:textSize="30sp" />

    <TextView
        android:fontFamily="@font/font_used"
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <top.androidman.SuperButton
        android:id="@+id/rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:paddingVertical="20sp"
        android:paddingLeft="200sp"
        android:paddingRight="220sp"

        app:border_color="@color/match2"
        app:border_width="5dp"
        app:color_direction="TOP_BOTTOM"
        app:color_end="@color/match4"
        app:color_start="@color/match3"


        app:corner_left_top="35sp"
        app:corner_right_bottom="35sp"
        app:drawable_left="@drawable/ic_baseline_local_police_24"
        app:drawable_padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/start"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/start"
        app:layout_constraintVertical_bias="0.283"
        app:text="@string/rank"
        app:textColor="@color/match1"
        app:textSize="30sp" />

    <TextView
        android:fontFamily="@font/font_used"
        android:id="@+id/hScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="@+id/start"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/subtitle"
        app:layout_constraintVertical_bias="0.315" />

    <ImageButton
        android:scaleType="fitCenter"
        android:id="@+id/imageButton"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:alpha="40"
        android:background="#00F9CDA9"
        android:minWidth="3sp"
        android:minHeight="3sp"
        android:padding="0dp"
        android:tint="@color/match2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/ic_baseline_volume_up_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:tint="@color/match1"
        android:id="@+id/littleBall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome"
        app:layout_constraintBottom_toBottomOf="@+id/hScore"
        app:layout_constraintEnd_toEndOf="@+id/subtitle"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="@+id/subtitle"
        app:layout_constraintTop_toTopOf="@+id/hScore" />


</androidx.constraintlayout.widget.ConstraintLayout>